--- a/Sangiovese/.classpath
+++ b/Sangiovese/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/swingx-0.9.2.jar"/>
-	<classpathentry kind="lib" path="/home/brian/CODE/JAVA/ICS414/Sangiovese/lib/mockito-all-1.9.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/swingx-0.9.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
