--- a/Sangiovese/.classpath
+++ b/Sangiovese/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="lib/swingx-0.9.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mockito-all-1.9.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/uispec4j-2.4-jdk16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
